Fri Jun 14 10:48:41 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: finish updating GtkExtra to 3.0.5

Fri Jun 14 10:04:20 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Properly report errors from saving files

Thu Jun 13 16:42:42 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: copied lots of the files from 3.0.5, only gtkplot3d,
	  gtkplotdt and gtkplotsurface remain unupdated

	* gtkextra/gtkplotps.c: updated to the 3.0.5 version part way, the
	  new one is still broken so the new geometry stuff is not there (it
	  is drawn still upside down and then rotated).  Also
	  a fix from James Cloos to change the EPS header to EPSF from PCF,
	  seems to fix PDF conversion.

	* src/graphing.c: allow PDF export by calling ps2pdf properly,
	  also don't show the epsi checkbox unless we are exporting to EPS

Thu Jun 13 00:12:46 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*.c: start updating to gtkextra 3.0.5.  Only few files
	  converted: gtkplotcanvas.[ch], gtkplotpc.[ch], gtkextra.[ch],
	  gtkplotprint.[ch].  Must slowly work through custom bugfixes and
	  patches.  Note that gtkplotps.[ch] seems broken, so it's even
	  older than the other files.
	  Also added gtkplotcairo.[ch] for cairo output which is lots nicer

Wed Jun 12 19:20:51 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: adaptive step size for line plots, also detect jump
	  discontinuities

Wed Jun 12 14:22:13 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, gtkextra/gtkplotdata.c: Allow immediate fitting of
	  the dependent axis on function and parametric plots just as for
	  surface plots.  Fix fitting a parametric plot after zoom was
	  changed.

	* help/C/genius/xml: update documentation

Tue Jun 11 17:36:01 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/geniustests.txt: some new tests

Tue Jun 11 17:19:55 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/factoring.gel: Improve Factors so that for larger