@@ -7,6 +7,8 @@ Changes to 1.0.17
 * Add export of graphs to PDF directly
 * Line plot step size is adaptive, also line plots now detect jumps and do not
   draw a connecting line, try plotting UnitStep for example
+* Use arrow keys to move around a line plot
+* left-right arrow keys rotate surface plot
 * All plots are now antialiased on the screen (due to GtkExtra update and
   cairo usage).
 * Update internal GtkExtra to 3.0.5, and forward port all our changes/fixes
