@@ -1,3 +1,9 @@
+Fri Jun 14 12:01:24 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: fix precision when the starting limit is 0 or much
+	  nearrer zero than the ending limit.  On left/right keys rotate 3d
+	  plot, and on all arrow keys move about line plots
+
 Fri Jun 14 10:48:41 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* gtkextra/*: finish updating GtkExtra to 3.0.5
